--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "dependencies": {
         "boostrap": "^2.0.0",
-        "bootstrap-vue": "^2.21.2"
+        "bootstrap-vue": "^2.21.2",
+        "vue-cookies": "^1.7.4",
+        "vue-session": "^1.0.0"
     }
 }
